[package]
name = "rust-s3-downloader"
version = "0.1.0"
edition = "2021"
authors = ["Shane Burnham <shane.burnham@rollerdigital.com>"]
description = "Downloads files from S3 ~fast~ and optionally uploads them to a new bucket ignoring any that already exist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.0.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.5.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.29"
glob = "0.3.1"
thiserror = "1.0"
aws-smithy-runtime-api = "1.1.1"
clap = { version = "4.4.15", features = ["derive"] }
